--- a/inicio.html
+++ b/inicio.html
@@ -6,6 +6,13 @@
     <title>mi emprea</title>
 </head>
 <body>
+
+  <div style="text-align: center;">
+    <a href="nosotra.html">nosotra</a>
+    <a href="producto.html">producto</a>
+    <a href="contacto.html">contacto</a>
+
+  </div>
     <div style="text-align: center;">
   <h1> aguacates locos</h1>
     <p>somos los mas ricos y frescos </p>
