--- a/nosotra.html
+++ b/nosotra.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <div style="text-align: center;">
+        <a href="inicio.html">inicio</a>
+        <a href="producto.html">producto</a>
+        <a href="contacto.html">contacto</a>
+
+    </div>
+    <div style="text-align: center;">
  <h1>¿Quiene Somos?</h1>
     <h1>somos la mejor empresa de exportacion de aguacates del pais </h1>
     <p>nuestros equipo ,es el mejor comformado . en la industria comercial de todo el valle de aburra</p>
