--- a/producto.html
+++ b/producto.html
@@ -6,6 +6,12 @@
     <title>productos</title>
 </head>
 <body>
+    <div style="text-align: center;">
+        <a href="inicio.html">inicio</a>
+        <a href="nosotra.html">nosotra</a>
+        <a href="contacto.html">contacto</a>
+
+    </div>
    <div style="text-align: center;">
      <h1>nuestro productos</h1>
      <p>estos son los productos mas frecos que ofrecemos</p>
@@ -13,18 +19,29 @@
   <div  style="width: 30%;">
 
      <h2>aguacates</h2>
-    <img src="imagenes/mi aguacate.jpg" width="100%" height="100%">
+    <img src="imagenes/mi aguacate.jpg" width="100%" height="50%">
       </div>
      <div style="width: 30%;">
             <h2>guacamole</h2>
-            <img src="imagenes/mi guacamole.jpeg" width="100%" height="100%">
+            <img src="imagenes/mi guacamole.jpeg" width="100%" height="50%">
+            
         </div>
         <div style="width: 30%;">
-
             <h2>taquitos</h2>
-            <img src="imagenes/mi taquito.jpg" width="100%" height="100%">
+            <img src="imagenes/mi taquito.jpg" width="100%" height="50%">
         </div>
      </div>
         
+<div style="width: 300px;margin: 0 auto;">
+    <h2>listado de productos</h2>
+    <ul style="list-style-type: square;">
+        <li>aguacate</li>
+        <li>tomate</li>
+        <li>cebolla</li>
+        <li>pepino</li>
+        <li>tacos</li>
+    </ul>
+</div>
+
 </body>
 </html>
