--- a/guaca.html
+++ b/guaca.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>aguacate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>guacamole</title>
 </head>
 <body>
     <div style="text-align: center;">
-        <a href="aguacates.html"></a>
-        <h1>aguacates</h1>
-           <p>tenemos los mejores aguacates de todos los tamaños y variedades de sabores</p>
-           <img src="imagenes/mi aguacate.jpg" width="48%">
+        <a href="guaca.html">
+            <h1>guacamole</h1>
+             <p>tenemos los mejores guacamoles de toda la industria aguacatera</p>
+           <img src="/imagenes/mi guacamole.jpeg" width="48%">
+        </a>
+
+         
     </div>
     <div style="text-align: center;">
 <table border="1">
@@ -38,3 +41,5 @@
     </div>
 </body>
 </html>
+    
+
