--- a/taquito.html
+++ b/taquito.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>aguacate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>taquito</title>
 </head>
 <body>
-    <div style="text-align: center;">
-        <a href="aguacates.html"></a>
-        <h1>aguacates</h1>
-           <p>tenemos los mejores aguacates de todos los tamaños y variedades de sabores</p>
-           <img src="imagenes/mi aguacate.jpg" width="48%">
+     <div style="text-align: center;">
+        <a href="taquito.html ">
+            <h1>taquitos</h1>
+             <p>tenemos los mejores taquitos de la region colombiana</p>
+           <img src="/imagenes/mi taquito.jpg" width="48%">
+        </a>
+
+         
     </div>
     <div style="text-align: center;">
 <table border="1">
@@ -36,5 +39,8 @@
     </tbody>
 </table>
     </div>
+</body>
+</html>
+    
 </body>
 </html>
